--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -56,162 +56,173 @@ jenkins_pipeline_library_plugins_present:
   - name: apache-httpcomponents-client-4-api
     version: "4.5.13-1.0"
   - name: bootstrap4-api
-    version: "4.6.0-3"
+    version: "4.6.0-3"#
+  - name: bootstrap5-api
+    version: "5.1.3-4"
   - name: bouncycastle-api
-    version: "2.20"
+    version: "2.25"
   - name: branch-api
-    version: "2.6.4"
+    version: "2.7.0"
   - name: caffeine-api
-    version: "2.9.1-23.v51c4e2c879c8"
+    version: "2.9.2-29.v717aac953ff3"
   - name: checks-api
-    version: "1.7.0"
+    version: "1.7.2"
   - name: cloudbees-folder
-    version: "6.15"
+    version: "6.17"
   - name: command-launcher
     version: "1.6"
   - name: config-file-provider
-    version: "3.8.0"
+    version: "3.8.2"
   - name: configuration-as-code
-    version: "1.51"
+    version: "1.55.1"
   - name: credentials
-    version: "2.5"
+    version: "1074.v60e6c29b_b_44b_"
   - name: credentials-binding
-    version: "1.25"
+    version: "1.27.1"
   - name: display-url-api
     version: "2.3.5"
   - name: docker-workflow
-    version: "1.26"
+    version: "1.27"
   - name: docker-commons
-    version: "1.17"
+    version: "1.18"
   - name: durable-task
-    version: "1.37"
+    version: "493.v195aefbb0ff2"
   - name: echarts-api
-    version: "5.1.0-2"
+    version: "5.2.2-2"
   - name: extended-choice-parameter
     version: "0.82"
   - name: email-ext
-    version: "2.83"
+    version: "2.87"
   - name: font-awesome-api
-    version: "5.15.3-2"
+    version: "5.15.4-5"
   - name: git
-    version: "4.7.2"
+    version: "4.10.3"
   - name: git-client
-    version: "3.7.2"
+    version: "3.11.0"
   - name: git-server
-    version: "1.9"
+    version: "1.10"
   - name: handlebars
     version: "3.0.8"
   - name: http_request
-    version: "1.9.0"
+    version: "1.13"
   - name: jackson2-api
-    version: "2.12.3"
+    version: "2.13.1-246.va8a9f3eaf46a"
+  - name: javax-activation-api
+    version: "1.2.0-2"
+  - name: javax-mail-api
+    version: "1.6.2-5"
   - name: jdk-tool
     version: "1.5"
   - name: junit
-    version: "1.50"
+    version: "1.53"
   - name: jquery
     version: "1.12.4-1"
   - name: jquery-detached
     version: "1.2.1"
   - name: jquery3-api
-    version: "3.6.0-1"
+    version: "3.6.0-2"
   - name: jsch
     version: "0.1.55.2"
   - name: managed-scripts
     version: "1.5.4"
   - name: mailer
-    version: "1.34"
+    version: "408.vd726a_1130320"
   - name: managed-scripts
     version: "1.5.4"
   - name: mattermost
     version: "3.1.1"
   - name: matrix-project
-    version: "1.19"
+    version: "1.20"
+  - name: maven-plugin
+    version: "3.16"
   - name: momentjs
     version: "1.1.1"
   - name: mqtt-notification-plugin
     version: "1.8"
   - name: nodejs
-    version: "1.4.0"
+    version: "1.5.1"
   - name: Office-365-Connector
-    version: "4.15.0"
+    version: "4.15.2"
   - name: pipeline-aggregator-view
     version: "1.11"
   - name: pipeline-build-step
-    version: "2.13"
+    version: "2.15"
   - name: pipeline-graph-analysis
-    version: "1.11"
+    version: "188.v3a01e7973f2c"
   - name: pipeline-input-step
-    version: "2.12"
+    version: "446.vf27b_0b_83500e"
   - name: pipeline-milestone-step
     version: "1.3.2"
-  - name: pipeline-model-declarative-agent
-    version: "1.1.1"
   - name: pipeline-model-definition
-    version: "1.8.5"
+    version: "1.9.3"
   - name: pipeline-model-api
-    version: "1.8.5"
+    version: "1.9.3"
   - name: pipeline-model-extensions
-    version: "1.8.5"
+    version: "1.9.3"
   - name: pipeline-rest-api
-    version: "2.19"
+    version: "2.21"
   - name: pipeline-stage-step
-    version: "2.5"
+    version: "291.vf0a8a7aeeb50"
   - name: pipeline-stage-tags-metadata
-    version: "1.8.5"
+    version: "1.9.3"
   - name: pipeline-stage-view
-    version: "2.19"
+    version: "2.21"
   - name: pipeline-utility-steps
-    version: "2.8.0"
+    version: "2.12.0"
   - name: plain-credentials
-    version: "1.7"
+    version: "1.8"
   - name: plugin-util-api
-    version: "2.2.0"
+    version: "2.13.0"
   - name: popper-api
     version: "1.16.1-2"
+  - name: popper2-api
+    version: 2.11.2-1
   - name: rebuild
-    version: "1.32"
+    version: "1.33"
   - name: scm-api
-    version: "2.6.4"
+    version: "595.vd5a_df5eb_0e39"
   - name: script-security
-    version: "1.77"
+    version: "1131.v8b_b_5eda_c328e"
   - name: ssh-credentials
     version: "1.19"
   - name: ssh-steps
     version: "2.0.0"
   - name: ssh-slaves
-    version: "1.32.0"
+    version: "1.33.0"
+  - name: sshd
+    version: "3.1.0"
   - name: snakeyaml-api
-    version: "1.27.0"
+    version: "1.29.1"
   - name: structs
-    version: "1.23"
+    version: "308.v852b473a2b8c"
   - name: token-macro
-    version: "2.15"
+    version: "267.vcdaea6462991"
   - name: trilead-api
     version: "1.0.13"
   - name: workflow-api
-    version: "2.44"
+    version: "1136.v7f5f1759dc16"
   - name: workflow-basic-steps
-    version: "2.23"
-  - name: workflow-cps
-    version: "2.92"
-  - name: workflow-cps-global-lib
-    version: "2.19"
-  - name: workflow-durable-task-step
-    version: "2.39"
-  - name: workflow-job
-    version: "2.41"
-  - name: workflow-multibranch
     version: "2.24"
+  - name: workflow-cps
+    version: "2648.va9433432b33c"
+  - name: workflow-cps-global-lib
+    version: "552.vd9cc05b8a2e1"
+  - name: workflow-durable-task-step
+    version: "1121.va_65b_d2701486"
+  - name: workflow-job
+    version: "1145.v7f2433caa07f"
+  - name: workflow-multibranch
+    version: "706.vd43c65dec013"
   - name: workflow-scm-step
-    version: "2.12"
+    version: "2.13"
   - name: workflow-step-api
-    version: "2.23"
+    version: "622.vb_8e7c15b_c95a_"
   - name: workflow-support
-    version: "3.8"
+    version: "813.vb_d7c3d2984a_0"
 
 # Plugins that must be absent for jenkins-pipeline-library
-jenkins_pipeline_library_plugins_absent: []
+jenkins_pipeline_library_plugins_absent:
+  - name: pipeline-model-declarative-agent
 
 # Signatures that need to be approved for jenkins-pipeline-library
 jenkins_pipeline_library_approved_signatures_present:
