--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -52,7 +52,7 @@ jenkins_pipeline_library_plugins_present:
   - name: ace-editor
     version: "1.1"
   - name: analysis-model-api
-    version: "10.9.1"
+    version: "10.9.2"
   - name: antisamy-markup-formatter
     version: "2.7"
   - name: apache-httpcomponents-client-4-api
@@ -62,7 +62,7 @@ jenkins_pipeline_library_plugins_present:
   - name: bootstrap4-api
     version: "4.6.0-3"
   - name: bootstrap5-api
-    version: "5.1.3-4"
+    version: "5.1.3-6"
   - name: bouncycastle-api
     version: "2.25"
   - name: branch-api
@@ -72,37 +72,37 @@ jenkins_pipeline_library_plugins_present:
   - name: checks-api
     version: "1.7.2"
   - name: cloudbees-folder
-    version: "6.17"
+    version: "6.708.ve61636eb_65a_5"
   - name: command-launcher
     version: "1.6"
   - name: config-file-provider
-    version: "3.8.2"
+    version: "3.9.0"
   - name: configuration-as-code
-    version: "1.55.1"
+    version: "1414.v878271fc496f"
   - name: credentials
     version: "1074.v60e6c29b_b_44b_"
   - name: credentials-binding
     version: "1.27.1"
   - name: data-tables-api
-    version: "1.11.3-6"
+    version: "1.11.4-1"
   - name: display-url-api
     version: "2.3.5"
   - name: docker-workflow
-    version: "1.27"
+    version: "1.28"
   - name: docker-commons
-    version: "1.18"
+    version: "1.19"
   - name: durable-task
     version: "493.v195aefbb0ff2"
   - name: echarts-api
-    version: "5.2.2-2"
+    version: "5.3.0-2"
   - name: extended-choice-parameter
-    version: "0.82"
+    version: "346.vd87693c5a_86c"
   - name: email-ext
     version: "2.87"
   - name: font-awesome-api
-    version: "5.15.4-5"
+    version: "6.0.0-1"
   - name: forensics-api
-    version: "1.7.0"
+    version: "1.8.1"
   - name: git
     version: "4.10.3"
   - name: git-client
@@ -112,11 +112,11 @@ jenkins_pipeline_library_plugins_present:
   - name: handlebars
     version: "3.0.8"
   - name: http_request
-    version: "1.13"
+    version: "1.14"
   - name: jackson2-api
     version: "2.13.1-246.va8a9f3eaf46a"
   - name: javadoc
-    version: "1.6"
+    version: "217.v905b_86277a_2a_"
   - name: javax-activation-api
     version: "1.2.0-2"
   - name: javax-mail-api
@@ -124,7 +124,7 @@ jenkins_pipeline_library_plugins_present:
   - name: jdk-tool
     version: "1.5"
   - name: junit
-    version: "1.53"
+    version: "1.54"
   - name: jquery
     version: "1.12.4-1"
   - name: jquery-detached
@@ -156,13 +156,13 @@ jenkins_pipeline_library_plugins_present:
   - name: pipeline-aggregator-view
     version: "1.11"
   - name: pipeline-build-step
-    version: "2.15"
+    version: "2.16"
   - name: pipeline-graph-analysis
     version: "188.v3a01e7973f2c"
   - name: pipeline-input-step
     version: "446.vf27b_0b_83500e"
   - name: pipeline-milestone-step
-    version: "1.3.2"
+    version: "100.v60a_03cd446e1"
   - name: pipeline-model-definition
     version: "1.9.3"
   - name: pipeline-model-api
@@ -170,31 +170,31 @@ jenkins_pipeline_library_plugins_present:
   - name: pipeline-model-extensions
     version: "1.9.3"
   - name: pipeline-rest-api
-    version: "2.21"
+    version: "2.22"
   - name: pipeline-stage-step
     version: "291.vf0a8a7aeeb50"
   - name: pipeline-stage-tags-metadata
     version: "1.9.3"
   - name: pipeline-stage-view
-    version: "2.21"
+    version: "2.22"
   - name: pipeline-utility-steps
     version: "2.12.0"
   - name: plain-credentials
     version: "1.8"
   - name: plugin-util-api
-    version: "2.13.0"
+    version: "2.14.0"
   - name: popper-api
     version: "1.16.1-2"
   - name: popper2-api
     version: 2.11.2-1
   - name: prism-api
-    version: 1.25.0-2
+    version: "1.26.0-2"
   - name: rebuild
     version: "1.33"
   - name: scm-api
     version: "595.vd5a_df5eb_0e39"
   - name: script-security
-    version: "1131.v8b_b_5eda_c328e"
+    version: "1138.v8e727069a_025"
   - name: ssh-credentials
     version: "1.19"
   - name: ssh-steps
@@ -208,25 +208,25 @@ jenkins_pipeline_library_plugins_present:
   - name: structs
     version: "308.v852b473a2b8c"
   - name: token-macro
-    version: "267.vcdaea6462991"
+    version: "280.v97a_82642793c"
   - name: trilead-api
     version: "1.0.13"
   - name: warnings-ng
-    version: "9.11.0"
+    version: "9.11.1"
   - name: workflow-api
-    version: "1136.v7f5f1759dc16"
+    version: "1138.v619fd5201b_2f"
   - name: workflow-basic-steps
     version: "2.24"
   - name: workflow-cps
-    version: "2648.va9433432b33c"
+    version: "2659.v52d3de6044d0"
   - name: workflow-cps-global-lib
-    version: "552.vd9cc05b8a2e1"
+    version: "564.ve62a_4eb_b_e039"
   - name: workflow-durable-task-step
     version: "1121.va_65b_d2701486"
   - name: workflow-job
     version: "1145.v7f2433caa07f"
   - name: workflow-multibranch
-    version: "706.vd43c65dec013"
+    version: "711.vdfef37cda_816"
   - name: workflow-scm-step
     version: "2.13"
   - name: workflow-step-api
